examples/c/error-codes/undefined/UB-TEOFF1-bad-static.output
UB-TEOFF1-bad-static.c:4:14: error: Offsetof member designator specifies a bit-field.

    Undefined behavior (UB-TEOFF1):
        see C11 section 7.19:3 http://rvdoc.org/C11/7.19
        see C11 section J.2:1 item 144 http://rvdoc.org/C11/J.2
        see CERT-C section MSC15-C http://rvdoc.org/CERT-C/MSC15-C
        see MISRA-C section 8.1:3 http://rvdoc.org/MISRA-C/8.1

